--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "js-cookie": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-drag-drop-files": "^2.3.0",
     "react-google-login": "^5.2.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
