--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^17.0.2",
     "react-drag-drop-files": "^2.3.0",
     "react-google-login": "^5.2.2",
+    "react-loader-spinner": "^5.1.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
