--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "bootstrap": "^5.1.3",
     "js-cookie": "^3.0.1",
     "react": "^17.0.2",
+    "react-alert": "^7.0.3",
+    "react-alert-template-basic": "^1.0.2",
     "react-dom": "^17.0.2",
     "react-drag-drop-files": "^2.3.0",
     "react-google-login": "^5.2.2",
