--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "trackman",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000",
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
@@ -19,6 +18,7 @@
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
     "react-alert-template-basic": "^1.0.2",
+    "react-csv": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-drag-drop-files": "^2.3.0",
     "react-google-login": "^5.2.2",
